// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image tile View renders a view image component 1`] = `
<p
  className="tile image align center"
>
  <img
    alt=""
    src="image.jpg"
  />
</p>
`;

exports[`Image tile View renders a view image component detached 1`] = `
<p
  className="tile image align center detached"
>
  <img
    alt=""
    src="image.jpg"
  />
</p>
`;
